<resources>
    <string name="app_name">Games</string>

    <string name="player_first">First player</string>
    <string name="player_second">Second player</string>
    <string name="game_choice">Choose game</string>
    <string name="game_cross">Cross</string>
    <string name="game_city">City</string>
    <string name="game_rows">Rows</string>
    <string name="game_sequence">Sequence</string>

    <string name="next">Next</string>
    <string name="back">Back</string>

    <string name="error_empty">*Field is empty</string>
    <string name="current_player">Current player</string>
    <string name="score">Score</string>
    <string name="quit">Quit</string>
    <string name="finish">Finish</string>
    <string name="surrender">Surrender</string>
    <string name="start">Start</string>
    <string name="get_ready">Get ready!</string>
    <string name="pass_move">Pass move</string>
    <string name="game_winner">Game winner</string>
    <string name="difficult_arguments">Difficult arguments</string>
    <string name="range">Range</string>
    <string name="time">Time</string>
    <string name="level">Level</string>
    <string name="play_again">Play again</string>

</resources>
