<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_Status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_ready"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/rv_game_field"
        app:layout_constraintEnd_toEndOf="@+id/rv_game_field"
        app:layout_constraintStart_toStartOf="@+id/rv_game_field" />

    <TextView
        android:id="@+id/tv_first_player"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/player_first"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_second_player"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/tv_second_player"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/player_second"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_first_player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_first_player"
        app:layout_constraintTop_toTopOf="@+id/tv_first_player" />

    <TextView
        android:id="@+id/tv_current_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_player"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/rv_game_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_first_player_res" />

    <TextView
        android:id="@+id/tv_first_player_res"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/player_first"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/tv_first_player"
        app:layout_constraintStart_toStartOf="@id/tv_first_player"
        app:layout_constraintTop_toBottomOf="@id/tv_first_player" />

    <TextView
        android:id="@+id/tv_second_player_res"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/player_second"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/tv_second_player"
        app:layout_constraintStart_toStartOf="@id/tv_second_player"
        app:layout_constraintTop_toBottomOf="@id/tv_second_player" />

    <TextView
        android:id="@+id/tv_current_player_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_player"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/tv_current_player"
        app:layout_constraintStart_toStartOf="@id/tv_current_player"
        app:layout_constraintTop_toBottomOf="@id/tv_current_player" />

    <TextView
        android:id="@+id/tv_first_player_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_current_player"
        app:layout_constraintEnd_toStartOf="@id/tv_current_player"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_current_player" />

    <TextView
        android:id="@+id/tv_first_player_score_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_first_player_score"
        app:layout_constraintStart_toStartOf="@id/tv_first_player_score"
        app:layout_constraintTop_toBottomOf="@id/tv_first_player_score" />

    <TextView
        android:id="@+id/tv_second_player_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_current_player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_current_player"
        app:layout_constraintTop_toTopOf="@id/tv_current_player" />

    <TextView
        android:id="@+id/tv_second_player_score_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_second_player_score"
        app:layout_constraintStart_toStartOf="@id/tv_second_player_score"
        app:layout_constraintTop_toBottomOf="@id/tv_second_player_score" />

    <Button
        android:id="@+id/bt_endGame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bt_pass_move"
        app:layout_constraintStart_toStartOf="@+id/bt_pass_move"
        app:layout_constraintTop_toBottomOf="@+id/bt_pass_move" />

    <Button
        android:id="@+id/bt_pass_move"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surrender"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/bt_endGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_game_field" />

    <Button
        android:id="@+id/bt_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/rv_game_field"
        app:layout_constraintEnd_toEndOf="@id/rv_game_field"
        app:layout_constraintStart_toStartOf="@id/rv_game_field"
        app:layout_constraintTop_toTopOf="@+id/rv_game_field" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_game_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/sequence_table"
        android:paddingHorizontal="4dp"
        android:paddingVertical="4dp"
        android:saveEnabled="false"
        android:visibility="invisible"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        app:spanCount="3"
        tools:itemCount="9"
        tools:listitem="@layout/item_sequence_cell" />


</androidx.constraintlayout.widget.ConstraintLayout>
